[package]
name = "sqlbarber"
description = "A SQL parser supports extracting table names and column names in a query"
version = "0.0.1"
authors = ["SuperBo <supernbo@gmail.com>", "Khang Dang <>"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["parser", "sql", "parsing", "bigquery", "snowflake"]
categories = ["parsing"]

[dependencies]
tree-sitter = "~0.20.9"

[build-dependencies]
cc = "1.0"
